Bug 1026985 - Stop reporting the memory use of nsAttrValue's MiscContainer objects if they are shared between more than one nsAttrValue. r=bz